# FocalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FEEditor.cpp  FEEditor.h  FEngine.cpp  FEngine.h  LICENSE.md  README.md  UpdateTimestamp.cmake  main.cpp  noTexture.FETexture  renamePopups.cpp
.github/workflows/: Build.yml
Core/: FECoreIncludes.h  FEGeometricTools.cpp  FEGeometricTools.h  FEObject.cpp  FEObject.h  FocalEngineAPI.h
CoreExtensions/: FEFreeCamera.cpp  FEFreeCamera.h  FEModelViewCamera.cpp  FEModelViewCamera.h
CoreExtensions/ComputeShaders/: FE_ComputeDepthPyramidDownSample_CS.glsl  FE_ComputeTextureCopy_CS.glsl  FE_FrustumCulling_CS.glsl
CoreExtensions/PostProcessEffects/: FEBloomEffect.cpp  FEBloomEffect.h  FEFXAA.cpp  FEFXAA.h  FEGammaAndHDRCorrection.cpp  FEGammaAndHDRCorrection.h  FE_ChromaticAberration_FS.glsl  FE_CombineFrameBuffers_FS.glsl  FE_DOF_FS.glsl  FE_ScreenQuad_FS.glsl
CoreExtensions/PostProcessEffects/FE_Bloom/: FE_BloomBlur_FS.glsl  FE_BloomComposition_FS.glsl  FE_BloomThreshold_FS.glsl
CoreExtensions/PostProcessEffects/FE_ChromaticAberration/: FE_ChromaticAberration_FS.glsl
CoreExtensions/PostProcessEffects/FE_DOF/: FE_DOF_FS.glsl  FE_DOF_VS.glsl
CoreExtensions/PostProcessEffects/FE_FXAA/: FE_FXAA_FS.glsl
CoreExtensions/PostProcessEffects/FE_GammaAndHDRCorrection/: FE_Gamma_and_HDR_Correction_FS.glsl
CoreExtensions/PostProcessEffects/FE_SSAO/: FE_SSAO_Blur_FS.glsl  FE_SSAO_FS.glsl  FE_SSAO_VS.glsl
CoreExtensions/ScreenspaceEffects/: FEBlurEffect.cpp  FEBlurEffect.h  FEGammaAndHDRCorrection.cpp  FEGammaAndHDRCorrection.h
CoreExtensions/StandardMaterial/: FEStandardMaterial.cpp  FEStandardMaterial.h  FEStandardShader.cpp  FEStandardShader.h
CoreExtensions/StandardMaterial/InstancedLineMaterial/: FE_InstancedLine_FS.glsl  FE_InstancedLine_VS.glsl  FE_InstancedLine_VS_my_test.glsl  FE_InstancedLine_VS_old_Copy.glsl
CoreExtensions/StandardMaterial/PBRMaterial/: FEPBRShader.cpp  FEPBRShader.h  FE_PBR_FS.glsl  (+5 more)
Editor/: FEEditor.cpp  FEEditor.h  FEEditorContentBrowser.cpp  FEEditorDragAndDropManager.cpp  FEEditorDragAndDropManager.h  FEEditorGizmoManager.cpp  FEEditorGizmoManager.h  FEEditorHaloSelectionEffect.cpp  FEEditorHaloSelectionEffect.h  FEEditorInternalResources.cpp  FEEditorInternalResources.h  FEEditorPreviewManager.cpp  FEEditorPreviewManager.h  FEEditorSelectedObject.cpp  FEEditorSelectedObject.h  FEEditorVirtualFileSystem.cpp  FEEditorVirtualFileSystem.h  FEMeshPreviewShader.h  FEPixelAccurateSelectionShader.h  FEProject.cpp  FEProject.h  FESelectionHaloEffect.h
Editor/FEDearImguiWrapper/: FEDearImguiWrapper.cpp  FEDearImguiWrapper.h
Editor/FEEditorSubWindows/: combineChannelsToTexturePopUp.cpp  combineChannelsToTexturePopUp.h  debugTextureViewWindow.cpp  debugTextureViewWindow.h  deletePopups.cpp  deletePopups.h  editPopups.cpp  editPopups.h  gyzmosSettingsWindow.h  loadTexturePopup.cpp  loadTexturePopup.h  prefabEditorWindow.cpp  prefabEditorWindow.h  projectWasModifiedPopUp.cpp  projectWasModifiedPopUp.h  renamePopups.cpp  renamePopups.h  resizeTexturePopup.cpp  resizeTexturePopup.h  selectPopups.cpp  selectPopups.h  shaderEditorWindow.cpp  shaderEditorWindow.h
Editor/Materials/: FE_HaloDrawObject_FS.glsl  FE_HaloDrawObject_INSTANCED_VS.glsl  FE_HaloDrawObject_VS.glsl  FE_HaloSelectionEffect_FS.glsl  FE_MeshPreview_FS.glsl  FE_MeshPreview_VS.glsl  FE_PixelAccurateSelection_FS.glsl  FE_PixelAccurateSelection_INSTANCED_VS.glsl  FE_PixelAccurateSelection_VS.glsl
Editor/NodeSystem/: FEEditorNode.cpp  FEEditorNode.h  FEEditorNodeArea.cpp  FEEditorNodeArea.h  FEEditorNodeSocket.cpp  FEEditorNodeSocket.h  FEEditorNodeSystem.cpp  FEEditorNodeSystem.h
Renderer/: FEAsset.cpp  FEAsset.h  FEEntity.cpp  FEEntity.h  FEEntityInstanced.cpp  FEEntityInstanced.h  FEFramebuffer.cpp  FEFramebuffer.h  FEGameModel.cpp  FEGameModel.h  FELight.cpp  FELight.h  FELine.h  FEMaterial.cpp  FEMaterial.h  FEMesh.cpp  FEMesh.h  FEPostProcess.cpp  FEPostProcess.h  FEPrefab.cpp  FEPrefab.h  FERenderer.cpp  FERenderer.h  FEScreenSpaceEffect.cpp  FEScreenSpaceEffect.h  FEShader.cpp  FEShader.h  FEShader.inl  FEShaderUniform.cpp  FEShaderUniform.h  FEShaderUniform.inl  FETerrain.cpp  FETerrain.h  FETexture.cpp  FETexture.h  FEViewport.cpp  FEViewport.h
ResourceManager/: Config.h.in  FEObjLoader.cpp  FEObjLoader.h  FEResourceManager.cpp  FEResourceManager.h  FEResourceManager.inl  FEglTFLoader.cpp  FEglTFLoader.h  PNGTextureLoader.cpp  PNGTextureLoader.h  Timestamp.h.in
Resources/: 19622421516E5B317E1B5360.model  3F2118296C1E4533506A472E.texture  45191B6F172E3B531978692E.model  456A31026A1C3152181A6064.texture  48271F005A73241F5D7E7134.texture  637C784B2E5E5C6548190E1B.model  7F251E3E0D08013E3579315F.model  7F6057403249580D73311B54.texture  imgui.ini
Resources/UserScriptsData/: FENativeScriptConnector.cpp  FENativeScriptConnector.h  NativeScriptTemplate.cpp  NativeScriptTemplate.h
SubSystems/: FEBasicCamera.cpp  FEBasicCamera.h  FECoreIncludes.h  FEFileSystem.cpp  FEFileSystem.h  FEGeometricTools.cpp  FEGeometricTools.h  FEInput.cpp  FEInput.h  FEJobManager.cpp  FEJobManager.h  FELog.cpp  FELog.h  FEObject.cpp  FEObject.h  FEScene.cpp  FEScene.h  FETerrain.cpp  FETerrain.h  FETime.cpp  FETime.h  FETransformComponent.cpp  FETransformComponent.h  FEVirtualUIContext.cpp  FEVirtualUIContext.h
SubSystems/FEOpenXR/: FEOpenXR.cpp  FEOpenXR.h  FEOpenXRCore.cpp  FEOpenXRCore.h  FEOpenXRInput.cpp  FEOpenXRInput.h  FEOpenXRRendering.cpp  FEOpenXRRendering.h
SubSystems/FileSystem/: FEAssetPackage.cpp  FEAssetPackage.h  FEFileSystem.cpp  FEFileSystem.h
SubSystems/Scene/: FEEntity.cpp  FEEntity.h  FENaiveSceneEntity.cpp  FENaiveSceneEntity.h  FENaiveSceneGraph.cpp  FENaiveSceneGraph.h  FENaiveSceneGraph.inl  FENaiveSceneGraphNode.cpp  FENaiveSceneGraphNode.h  FENewEntity.cpp  FENewEntity.h  FEPrefab.cpp  FEPrefab.h  FEScene.cpp  FEScene.h  FEScene.inl  FESceneManager.cpp  FESceneManager.h  FESceneManager.inl  FETransformComponent.cpp  FETransformComponent.h
Tests/: RunAllTests.cpp  RunAllTests.h  SceneGraphTest.cpp  SceneGraphTest.h
(+124 files in other folders)
